syntax = "proto3";

package user;
option go_package = "/proto/userpb";

message GetUserInfoRequest {
  int64 user_id = 1;
}

message GetUserInfoResponse {
  int64 user_id = 1;
  string name = 2;
  string email = 3;
  string role = 4;
}

service UserService {
  rpc GetUserByUserId(GetUserInfoRequest) returns (GetUserInfoResponse);
}